# Mexius

./: .gitignore  Cargo.toml  README.md  build_and_ls.sh  config.toml  fix_paths.py  install.sh  run_audit.sh  setup-windows-boot.ps1  start_gateway.sh  test_routes.sh
.config/systemd/user/: herma-gateway.service  mexius.service
.goldclaw_temp/: Cargo.toml
.goldclaw_temp/src/: main.rs
crates/goldclaw-api/: Cargo.toml
crates/goldclaw-api/src/: gateway.rs  hermes.rs  lattice.rs  main.rs  memory_store.rs  openclaw.rs  zeroclaw.rs
crates/goldclaw-api/src/tools/: mod.rs
crates/goldclaw-memory-mini/: Cargo.toml
crates/goldclaw-memory-mini/src/: lib.rs
crates/goldclaw-memory-mini/tests/: live_audit.rs
crates/lattice_kernel/: Cargo.toml  build.rs
crates/lattice_kernel/src/: dna_map.rs  ffi.rs  hamming.rs  lib.rs  main.rs  pulse.rs
crates/lattice_kernel/tauri/: lattice_api.ts  tauri_commands.rs
crates/lattice_kernel/tests/: integration.rs
crates/mexius-api/: Cargo.toml
crates/mexius-api/src/: compat.rs  gateway.rs  hermes.rs  lattice.rs  main.rs  model_registry.rs  sovereignty.rs
crates/mexius-api/src/tools/: mod.rs
crates/mexius-memory-extra/: Cargo.toml
crates/mexius-memory-extra/src/: lib.rs
crates/mexius-memory-mini/: Cargo.toml
crates/mexius-memory-mini/tests/: live_audit.rs
crates/species_kernel/: Cargo.toml
crates/species_kernel/src/: entity.rs  lib.rs  main.rs
crates/zeroclaw-memory/: Cargo.toml
docs/: HEADLESS.md
run_logs/: build_gateway.txt  live_audit_run.txt  ps.txt  root.html  soul_monitor.json  target_list.txt  verify.txt
scripts/: check_gateway.sh  check_herma_bin.sh  check_mexius_bin.sh  check_toml_duplicates.py  git_commit_and_push.sh  rebrand.js  rebrand.py  restart_gateway.sh  run_sudo_and_test.sh  startup_dashboard.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: DreamOverlay.tsx  GhostTerminal.tsx  ModeToggle.tsx  PinGate.tsx  SettingsModal.tsx  StarMap.tsx  SubconsciousWidget.tsx
web/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
web/src/contexts/: SovereigntyContext.tsx  ThemeContext.tsx
web/src/hooks/: useAuth.ts  useDevices.ts  useResonance.ts
web/src/lib/: api.ts  auth.ts  basePath.ts  chatHistoryStorage.ts  i18n.ts  sse.ts  tauri.ts  ws.ts
web/src/pages/: AgentChat.tsx  Canvas.tsx  Config.tsx  Cron.tsx  Dashboard.tsx  Logs.tsx  ModelMesh.tsx  Nexus.tsx  Pairing.tsx  SoulEditor.tsx  Telemetry.tsx  Tools.tsx
web/src/pages/config/: ConfigFormView.tsx  useConfigState.ts
web/src/pages/config/sections/: GeneralSection.tsx  WebSearchSection.tsx
web/src/types/: api.ts
