[workspace]
members = [
    "crates/goldclaw-api",
    "crates/goldclaw-memory-mini",
    "crates/lattice_kernel",
    "crates/species_kernel",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
memmap2     = "0.9"
parking_lot = "0.12"
crossbeam   = "0.8"
bytemuck    = "1.14"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
