[package]
name = "goldclaw-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "goldclaw_api"
path = "src/lib.rs"

[[bin]]
name = "herma-gateway"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "runtime", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# Parking lot RwLock used by in-memory audit/pinned store
parking_lot = "0.12"
# Live memory bridge to ZeroClaw memory crate (local path)
goldclaw_memory = { package = "goldclaw-memory", path = "../goldclaw-memory-mini" }

[dev-dependencies]
tempfile = "3"
