[package]
name    = "species_kernel"
version = "0.1.0"
edition = "2021"

[lib]
name       = "species_kernel"
crate-type = ["rlib"]

[[bin]]
name = "species_kernel_dev"
path = "src/main.rs"

[dependencies]
lattice_kernel     = { path = "../lattice_kernel" }
memmap2            = { workspace = true }
parking_lot        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
